--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -4,11 +4,20 @@
 
                         {% block content %}
 
+
+   {% if user.is_authenticated %}
+     <li>User: {{ user.get_username }}</li>
+     <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+   {% else %}
+     <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+   {% endif %}
+
+
                     	<div class="row">
 
 
                             <div class="sub-title">
-                           		<a href=""><h1>Aşşırı Objektif</h1></a>
+                           		<a href="{% url 'blog:index'%}"><h1>Aşşırı Objektif</h1></a>
                                 <a href="#" class="btn-header-search"><i class="icon-magnifier"></i></a>
                              </div>
 
@@ -28,9 +37,11 @@
                                               <a href="{% url 'blog:post_detail' post.slug %}"><h2>{{post.title}}</h2></a>
                                             </div>
                                             <div class="post-info">
-                                                <span>{{post.pub_date | date}} / In <a href="/topic/{{post.topic}}">{{post.topic.name}}</a></span>
+                                                <span>{{post.pub_date | date}} / In <a href="{% url 'blog:topic_detail' post.topic.slug %}">{{post.topic.name}}</a>
+                                                    / Author <a href="{% url 'blog:author_detail' post.author.id %}">{{post.author.get_full_name}}</a>
+                                                </span>
                                             </div>
-                                            <p>{{post.content | safe | truncatewords_html:64}}</p>
+                                            <p>{{post.content | safe | truncatewords_html:96}}</p>
                                             <a href="{% url 'blog:post_detail' post.slug %}" class="button button-style button-anim fa fa-long-arrow-right"><span>Read More</span></a>
                                         </div>
                                         <!-- Blog Post End -->
