--- a/checkstatic/static/css/style.css
+++ b/checkstatic/static/css/style.css
@@ -818,7 +818,7 @@ blockquote {
 /* Footer */
 
 .footer {
-    background: url(../images/bg/pattern-bg.png);
+    background: url(..Fpa/../images/bg/pattern-bg.png);
     background-repeat: repeat;
     text-align: center;
     padding: 30px 0;
