--- a/static/css/style.css
+++ b/static/css/style.css
@@ -851,7 +851,6 @@ blockquote {
 
 .menu-link {
     list-style: none;
-    padding: 25px;
     margin: 0;
     text-align: center;
 }
@@ -875,8 +874,9 @@ blockquote {
     display: block;
     color: #333333;
     text-align: center;
-    font-size: 13px;
+    font-size: 18px;
     transition: all 0.3s ease-in-out;
+    padding: 14px 16px;
 }
 
 .menu-link li a:hover {
