--- a/blog/templates/blog/add_topic.html
+++ b/blog/templates/blog/add_topic.html
@@ -1,6 +1,8 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 
+{% block title %}Add Topic{% endblock %}
+
 {% block javascript %}
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
