--- a/blog/templates/blog/author_detail.html
+++ b/blog/templates/blog/author_detail.html
@@ -29,11 +29,13 @@
         {% for post in posts %}
         <!-- Blog Post Start -->
         <div class="col-md-12 blog-post">
-            <!--
-            <div class="post-image">
-                <img src="{% static 'images/blog/1.jpg' %}" alt="">
-            </div>
-            -->
+
+            {% if post.post_picture %}
+
+                <img src="{{ post.post_picture.url}}" alt="" style="">
+
+            {% endif %}
+
             <div class="post-title">
                 <a href="{% url 'blog:post_detail' post.slug %}"><h2>{{post.title}}</h2></a>
             </div>
@@ -45,7 +47,7 @@
                             {% endif %}
                         </span>
             </div>
-            <p>{{post.content | safe | truncatewords_html:64}}</p>
+            <p>{{post.content | safe | truncatewords_html:96}}</p>
             <a href="{% url 'blog:post_detail' post.slug %}"
                class="button button-style button-anim fa fa-long-arrow-right"><span>Read More</span></a>
         </div>
