--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -16,31 +16,36 @@
 
     <div class="col-md-12 content-page">
 
-    <div class="dropdown">
-        <form class="navbar-form navbar-left" action="{% url 'blog:index' %}">
-            <div class="form-group">
-                <select  class="form-control form-control-sm" name="sort" onchange="this.form.submit()">
+        <!-- Sorting Menu Start -->
+        <div class="dropdown">
+            <form class="navbar-form navbar-left" action="{% url 'blog:index' %}">
+                <div class="form-group">
+                    <select class="form-control form-control-sm" name="sort" onchange="this.form.submit()">
 
-                    <option disabled="disabled" selected="selected">Sorting method</option>
-                    <option value=newest>Date published (newest)</option>
-                    <option value=oldest>Date published (oldest)</option>
-                    <option value=author>Author name (a to z)</option>
-                    <option value=topic>Topic name (a to z)</option>
+                        <option disabled="disabled" selected="selected">Sorting method</option>
+                        <option value=newest>Date published (newest)</option>
+                        <option value=oldest>Date published (oldest)</option>
+                        <option value=author>Author name (a to z)</option>
+                        <option value=topic>Topic name (a to z)</option>
 
-                </select>
-            </div>
-        </form>
-    </div>
+                    </select>
+                </div>
+            </form>
+        </div>
+        <!-- Sorting Menu End -->
 
+        <br>
         {% if posts %}
         {% for post in posts %}
         <!-- Blog Post Start -->
         <div class="col-md-12 blog-post">
-            <!--
-            <div class="post-image">
-                <img src="{% static 'images/blog/1.jpg' %}" alt="">
-            </div>
-            -->
+
+            {% if post.post_picture %}
+
+                <img src="{{ post.post_picture.url}}" alt="" style="">
+
+            {% endif %}
+
             <div class="post-title">
                 <a href="{% url 'blog:post_detail' post.slug %}"><h2>{{post.title}}</h2></a>
             </div>
