--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,7 +1,7 @@
 ﻿{% extends 'blog/base.html' %}
 {% load static %}
 
-{% block title %}{{post.title}}{% endblock %}
+{% block title %}Post - {{post.title}}{% endblock %}
 
 {% block content %}
 
