--- a/blog/templates/blog/add_post.html
+++ b/blog/templates/blog/add_post.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 {% endblock %}
 
+
 {% block content %}
 
 <div class="row">
@@ -16,6 +17,7 @@
         <a href="{% url 'blog:index'%}"><h1>Aşşırı Objektif</h1></a>
         <a href="#" class="btn-header-search"><i class="icon-magnifier"></i></a>
     </div>
+
 
     <div class="col-md-12 content-page">
 
@@ -34,3 +36,13 @@
 
 {% endblock %}
 
+{% block select2 %}
+<link href="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/js/select2.min.js"></script>
+<script>
+$(document).ready(function() {
+    $('#id_topic').select2();
+    $('#id_related_posts').select2();
+});
+</script>
+{% endblock %}
