--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -34,6 +34,9 @@
     <!-- Google Web Fonts  -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700|Merriweather">
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
+
     <!-- HTML5 shiv and Respond.js support IE8 or Older for HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -43,20 +46,6 @@
 
     {% block javascript %}{% endblock %}
 
-    <style>
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background-color: #333;
-      position: fixed;
-      top: 0;
-      width: 100%;
-    }
-
-
-    </style>
 
 </head>
 
@@ -94,10 +83,10 @@
 
 
 <!-- Navbar Start -->
-<ul class="nav navbar-nav" style="z-index: 2">
+<ul id="navbar" class="nav navbar-nav" style="z-index: 9">
     <li><a href="{% url 'blog:index'%}">Home</a></li>
-    <li><a href="{% url 'blog:index'%}">About</a></li>
-    <li><a href="{% url 'blog:index'%}">Contact</a></li>
+    <li><a href="{% url 'blog:all_topics'%}">Topics</a></li>
+    <li><a href="{% url 'blog:about'%}">About</a></li>
     {% if user.is_authenticated %}
     <li><a href="{% url 'blog:add_post'%}">New Post</a></li>
     <li><a href="{% url 'blog:add_topic'%}">New Topic</a></li>
@@ -106,7 +95,6 @@
     {% else %}
     <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
     {% endif %}
-
 </ul>
 <!--  Navbar End -->
 
@@ -184,9 +172,9 @@ DarkReader.auto({
     contrast: 100,
     sepia: 0
 });
-
-
 </script>
-
+{% block initial_like %} {% endblock %}
+{% block like_dislike %} {% endblock %}
+{% block select2 %} {% endblock %}
 </body>
 </html>
