--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -20,10 +20,10 @@
 
     <div class="col-md-12 content-page">
 
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
-                <label for="id_message">New Post</label>
+                <label>Edit Post</label>
                 {{ form.media }}
                 {{ form.as_p }}
             </div>
@@ -35,3 +35,13 @@
 
 {% endblock %}
 
+{% block select2 %}
+<link href="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/js/select2.min.js"></script>
+<script>
+$(document).ready(function() {
+    $('#id_topic').select2();
+    $('#id_related_posts').select2();
+});
+</script>
+{% endblock %}
